# C-CODE

./: CMakeLists.txt
CBOOK/: section1.c
advanced/: a.out  enums.c  flexarr.c  memmangegment.c  typedef.c  varlengtharr.c
arrays/: a.out  array.c  twod.c
controlflow/: a.out  controlflow.c
decisions/: decisions.c
decisions/output/: decisions
decisions/output/decisions.dSYM/Contents/Resources/DWARF/: decisions
enums/: enum.c  enums2.c
enums/output/: enums2
enums/output/enums2.dSYM/Contents/Resources/DWARF/: enums2
functions/: functions..c  functionstwo.c  tictactoe.c
functions/output/: functions.  functionstwo
functions/output/functions..dSYM/Contents/: Info.plist
functions/output/functions..dSYM/Contents/Resources/DWARF/: functions.
functions/output/functionstwo.dSYM/Contents/: Info.plist
functions/output/functionstwo.dSYM/Contents/Resources/DWARF/: functionstwo
loops/: a.out  loops.c
memory/: memmang.c
mortgageCalc/: a.out  mortgage.c
operators/: a.out  bitwise.c
pointers/: LLpointers.c  pointers.c
pointers/output/: LLpointers  pointers
pointers/output/LLpointers.dSYM/Contents/: Info.plist
pointers/output/LLpointers.dSYM/Contents/Resources/DWARF/: LLpointers
pointers/output/pointers.dSYM/Contents/Resources/DWARF/: pointers
qualifiers/: qualifier.c
register/: register.c
register/output/: register
scope/: a.out  counter.c  scope.c
strings/: string.c
strings/output/: string
struct/: date.c  struct.c  time.c
struct/output/: date  time
struct/output/date.dSYM/Contents/Resources/DWARF/: date
swap/: a.out  swap.c
(+13 files in other folders)
